2003-07-29  Derek Price  <derek@ximbiot.com>

	* checkout.c (checkaddfile): Simplify the logic here, using assumptions
	already made later in the function to remove calls to locate_rcs and
	some conditionals.  Use same assumptions to remove some variables.

2003-07-29  Derek Price  <derek@ximbiot.com>

	* login.c: Remove GETPASS & HAVE_GETPASSPHRASE cruft in favor of always
	using the GNULIB getpass since the system getpass was removed from the
	POSIX.2 specification.

2003-07-28  Derek Price  <derek@ximbiot.com>

	* subr.c (strip_trailiing_newlines): Use size_t rather than int to
	count string length.
	(Suggestion from Paul Edwards, who provides a broken return email
	address in Tonga.  I believe he is actually from Australia.)

2003-07-28  Derek Price  <derek@ximbiot.com>

	* checkout.c (checkout): Remove out-of-date comment about Checkin.prog
	and Update.prog.

2003-07-25  Derek Price  <derek@ximbiot.com>

	* rcs.c (RCS_parsercsfile): Declare rcsfile argument as const.
	* rcs.h (RCS_parsercsfile): Update prototype to match.
	* commit.c (fixaddfile): Accept a single path to an rcs file as an
	argument rather than trying to look it up again when it is not
	necessary.

2003-07-25  Derek Price  <derek@ximbiot.com>

	* commit.c (finaladd): But don't free variables we no longer allocate.

2003-07-25  Derek Price  <derek@ximbiot.com>

	* checkin.c (Checkin): The rcs argument is unecessary since we know
	that the parsed RCS data always exists as part of finfo by the time
	this function gets called.
	* commit.c (commit_fileproc, finaladd):  Use new Checkin() API.
	* cvs.h (Checkin): Update prototype.

2003-07-25  Derek Price  <derek@ximbiot.com>

	* subr.c (strip_trailing_newlines): Check len b4 str[len] to avoid
	exceeding the array bounds when the string length == 0.
	(Report from John Tytgat <JoTy@esko-graphics.com>.)

2003-07-25  Derek Price  <derek@ximbiot.com>

	* subr.c (strip_trailing_newlines): Generalize this function to watch